--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_fonts: ^6.0.0
   bordered_text: ^2.0.0
   easy_splash_screen: ^1.0.4
+  flutter_staggered_grid_view: ^0.7.0
 
 flutter_icons:
   android: true
