--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   easy_image_viewer: ^1.4.0
   emoji_picker_flutter: ^1.6.4
   auto_size_text: ^3.0.0
+  zego_uikit_prebuilt_call: ^4.2.1
 
 dev_dependencies:
   flutter_test:
